[gd_scene load_steps=3 format=3 uid="uid://bs3pmrooj4dod"]

[ext_resource type="Script" path="res://scripts/controllers/gamer_controller.gd" id="1_2n48k"]
[ext_resource type="Resource" uid="uid://mu6ha3ld7jjl" path="res://resources/varied/theme/theme_varied.tres" id="2_kjxgg"]

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_2n48k")
quiz = ExtResource("2_kjxgg")
color_right = Color(0.299479, 0.958333, 0, 1)
color_wrong = Color(1, 0, 0, 1)

[node name="Content" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Questionifo" type="VBoxContainer" parent="Content"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -336.0
offset_right = 336.0
offset_bottom = 523.0
grow_horizontal = 2

[node name="QuestionText" type="Label" parent="Content/Questionifo"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 40
text = "Pergunta"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ImageHolder" type="Panel" parent="Content/Questionifo"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="QuestionImage" type="TextureRect" parent="Content/Questionifo/ImageHolder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QuestionVideo" type="VideoStreamPlayer" parent="Content/Questionifo/ImageHolder"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand = true

[node name="QuestionAudio" type="AudioStreamPlayer" parent="Content/Questionifo/ImageHolder"]

[node name="QuestionHolder" type="VBoxContainer" parent="Content"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -334.0
offset_top = -730.0
offset_right = 336.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="ButtonOption1" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
autowrap_mode = 2

[node name="ButtonOption2" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
autowrap_mode = 2

[node name="ButtonOption3" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
autowrap_mode = 2

[node name="ButtonOption4" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
autowrap_mode = 2
